--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "http-errors": "~1.8.0",
+    "mongoose": "^5.11.13",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
   },
