--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,9 @@ node_modules/
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 launch.json
-
-#TODO add .env to your gitignore
-
