--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "test": "NODE_ENV=test ./node_modules/.bin/mocha --exit --timeout 30000"
   },
   "dependencies": {
+    "@thream/socketio-jwt": "^2.1.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
@@ -15,11 +16,14 @@
     "express-jwt": "^6.0.0",
     "express-validator": "^6.9.2",
     "http-errors": "~1.8.0",
+    "jest-cli": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
-    "set-cookie-parser": "^2.4.7"
+    "set-cookie-parser": "^2.4.7",
+    "socket.io": "^3.1.2",
+    "socket.io-client": "^3.1.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
